fix: change z-index for burger men, fix burger opening behevior

--- a/src/components/BurgerMenu/BurgerMenu.module.css
+++ b/src/components/BurgerMenu/BurgerMenu.module.css
@@ -13,8 +13,15 @@
     left: 0;
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: #f5f5f5;
     gap: 0.4rem;
     width: 100vw;
+    z-index: 10;
   }
+}
+
+.link {
+  width: fit-content;
+  padding: 0.4rem;
 }
